# midiguitar

./: .gitignore  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  README  README.md  RtMidi.cpp  config.h  config.h.in  configure  configure.ac  guitar-midi.desktop  guitar.cpp  guitar.h  main.cpp  main.fld  main.h  makefile  midiguitar.desktop
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile.am  RtMidi.h  globals.h  guitar.cpp  guitar.h  main.cpp  sliderW.cpp  sliderW.h
